remove simplebar js
simplebar js caused a problem in the mobile view

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="https://kenwheeler.github.io/slick/slick/slick-theme.css" rel="stylesheet"/>
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplebar/5.3.6/simplebar.css" integrity="sha512-0EGld845fSKUDzrxFGdF//lic4e8si6FTrlLpOlts8P0ryaV8XkWy/AnwH9yk0G1wHcOvhY9L14W5LCMWa7W+Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
         <script src="https://kit.fontawesome.com/ee532bf7be.js" crossorigin="anonymous"></script>
@@ -31,7 +30,7 @@
     <h1 class="mr-2 text-white font-bold text-2xl flex items-center"><img src="img/film.png" class="w-6 mx-2" alt=""><span>Movies</span></h1></div></a>
 <div class="pt-2 relative mx-auto text-gray-600">
  <form id="Search">
-    <input class="border-2 search-word text-white bg-black border-secondary  w-52 sm:w-60 md:w-380 lg:w-600 h-10 px-5 pr-16 rounded-3xl text-sm focus:outline-none"
+    <input class="border-2 search-word text-white bg-black border-secondary  w-40 sm:w-60 md:w-380 lg:w-600 h-10 px-5 pr-16 rounded-3xl text-sm focus:outline-none"
       type="search" name="search" placeholder="Search...">
     <button type="submit" class="absolute right-0 top-0 mt-5 mr-4">
       <svg class="text-gray-600 h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
@@ -58,7 +57,7 @@
   <div class="modal-overlay absolute w-full h-full bg-gray-900 opacity-50"></div>
   
 
-    <div class="modal-container   h-screen  relative md:w-10/12 lg:w-8/12 mx-auto rounded shadow-lg z-40 ">
+  <div class="modal-container  h-screen overflow-x-hidden relative md:w-10/12 lg:w-8/12 mx-auto rounded shadow-lg z-40 ">
     
         <div class="modal-close absolute top-0 right-0 cursor-pointer flex flex-col items-center mt-4 mr-4  text-white text-sm z-50">
           <svg class="fill-current text-white" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
@@ -240,7 +239,6 @@
 
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/simplebar/5.3.6/simplebar.min.js" integrity="sha512-rn0CaCtyheymRT43p0ZuFH0SvNriLU5cuJpY2f4IcyLrbHzJdsIF1dygi9oNha1BhHagO8U+h2xRWCosYf9gCg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
