--- a/fav.html
+++ b/fav.html
@@ -26,10 +26,10 @@
     <div class="logo ">
         <a href="index.html">
     
-        <h1 class="mr-2 text-white font-bold text-2xl flex items-center"><img src="img/film.png" class="w-6 mx-2" alt=""><span>Movies</span></h1></div></a>
+        <h1 class=" text-white font-bold text-2xl flex items-center"><img src="img/film.png" class="w-6 mx-2" alt=""><span>Movies</span></h1></div></a>
     <div class="pt-2 relative mx-auto text-gray-600">
      <form id="Search">
-        <input class="border-2 search-word text-white bg-black border-secondary  w-52 sm:w-60 md:w-380 lg:w-600 h-10 px-5 pr-16 rounded-3xl text-sm focus:outline-none"
+        <input class="border-2 search-word text-white bg-black border-secondary  w-40 sm:w-60 md:w-380 lg:w-600 h-10 px-5 pr-16 rounded-3xl text-sm focus:outline-none"
           type="search" name="search" placeholder="Search...">
         <button type="submit" class="absolute right-0 top-0 mt-5 mr-4">
           <svg class="text-gray-600 h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
@@ -42,7 +42,7 @@
         </button></form>
       </div>
     <div>
-        <a href="watchLater.html">    <i class="far fa-bookmark mx-2"></i><span class="hidden sm:inline">Watch List</span></a>
+        <a href="watchLater.html">    <i class="far fa-bookmark mx-0 sm:mx-2"></i><span class="hidden sm:inline">Watch List</span></a>
         <a href="fav.html"><i class="far fa-heart mx-2"></i><span class="hidden sm:inline ">Favourite List</span></a>
     </div>
     </nav>
