--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="logo ">
     <a href="index.html">
 
-    <h1 class="mr-2 text-white font-bold text-2xl flex items-center"><img src="img/film.png" class="w-6 mx-2" alt=""><span>Movies</span></h1></div></a>
+    <h1 class=" text-white font-bold text-2xl flex items-center"><img src="img/film.png" class="w-6 mx-2" alt=""><span>Movies</span></h1></div></a>
 <div class="pt-2 relative mx-auto text-gray-600">
  <form id="Search">
     <input class="border-2 search-word text-white bg-black border-secondary  w-40 sm:w-60 md:w-380 lg:w-600 h-10 px-5 pr-16 rounded-3xl text-sm focus:outline-none"
@@ -43,7 +43,7 @@
     </button></form>
   </div>
 <div>
-    <a href="watchLater.html">    <i class="far fa-bookmark mx-2"></i><span class="hidden sm:inline">Watch List</span></a>
+    <a href="watchLater.html">    <i class="far fa-bookmark mx-0 sm:mx-2"></i><span class="hidden sm:inline">Watch List</span></a>
     <a href="fav.html"><i class="far fa-heart mx-2"></i><span class="hidden sm:inline ">Favourite List</span></a>
 </div>
 </nav>
